Adds category headers and custom input.

--- a/index.html
+++ b/index.html
@@ -14,17 +14,33 @@
         <p>Personalize your list of self-care activities, create daily and weekly goals, and set reminders to help you stay on your path.</p>
         
         <div class="categories">
-            <table id="exercise"></table>
-            <table id="sleep"></table>
-            <table id="nutrition"></table>
-            <table id="recreation"></table>
-            <table id="activities"></table>
-            <table id="custom"></table>
+            <h4>Make selections from the categories below.<br>Prioritize items that will have the biggest impact on your self-care routine.</h4>
+            <table id="exercise">
+                <h5>Exercise</h5>
+            </table>
+            <table id="sleep">
+                <h5>Sleep</h5>
+            </table>
+            <table id="nutrition">
+                <h5>Nutrition</h5>
+            </table>
+            <table id="recreation">
+                <h5>Recreation</h5>
+            </table>
+            <table id="activities">
+                <h5>Activities</h5>
+            </table>
+            <table id="custom">
+                <h5>Customize your self-care items:</h5>
+                <input id="add-item" type="text">
+                <button id="add">Submit</button>
+            </table>
         </div>
 
         <div class="goals">
+            <h4>What will you do today to take care of yourself?</h4>
             <input id="set-goal" type="text">
-            <button>Submit</button>
+            <button id="goal">Submit</button>
             <div>
                 <p></p>
                 Completed <input type="checkbox">
