--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="style.css">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@300&family=Oxygen&display=swap" rel="stylesheet">
     </head>
     <body>
         <h1>Take Care</h1>
